add new file addCinemaRoom

--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=MovieBooking
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=moviebooking;encrypt=true;trustServerCertificate=true
-spring.datasource.username=root
-spring.datasource.password=thanhtai?210701
+spring.datasource.username=sa
+spring.datasource.password=van2001
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
+spring.security.user.name=admin
+spring.security.user.password=123
+
