--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
-spring.security.user.name=trile
+spring.security.user.name=sa
 spring.security.user.password=123
