finish showtimes screen 3.1.5.1

--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.application.name=MovieBooking
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=moviebooking;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=123
+#spring.datasource.username=root
+#spring.datasource.password=thanhtai?210701
+
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
-spring.security.user.name=trile
+
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache=false
+
+#Xoa moi khi push
+
+spring.security.user.name=kha
 spring.security.user.password=123
+spring.datasource.username=sa
+spring.datasource.password=baibai123123
