--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.thymeleaf.cache=false
 
 #Xoa moi khi push
 
-spring.security.user.name=kha
+spring.security.user.name=trile
 spring.security.user.password=123
 
 spring.datasource.username=sa
-spring.datasource.password=baibai123123
+spring.datasource.password=123
 
