--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.thymeleaf.cache=false
 #Xoa moi khi push
 spring.security.user.name=kha
 spring.security.user.password=123
-spring.datasource.username=root
-spring.datasource.password=thanhtai?210701
+spring.datasource.username=sa
+spring.datasource.password=123
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 server.tomcat.max-swallow-size=20MB
