crud movie function

--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -8,3 +8,19 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.security.user.name=sa
 spring.security.user.password=123
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+# Disable open-in-view to avoid potential performance issues
+spring.jpa.open-in-view=false
+
+# Session configuration
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout=30m
