update file Home Page of Admin, Member, Employee.

--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 
 #Xoa moi khi push
-spring.security.user.name=kha
+spring.security.user.name=admin
 spring.security.user.password=123
-spring.datasource.username=root
-spring.datasource.password=thanhtai?210701
+spring.datasource.username=sa
+spring.datasource.password=van2001
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 server.tomcat.max-swallow-size=20MB
