--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.thymeleaf.cache=false
 spring.security.user.name=admin
 spring.security.user.password=123
 spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.password=van2001
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 server.tomcat.max-swallow-size=20MB
