--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=moviebooking;
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 
