--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=MovieBooking
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=moviebooking;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=van2001
+spring.datasource.password=baibai123123
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
