--- a/MovieBooking 2/src/main/resources/application.properties
+++ b/MovieBooking 2/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.application.name=MovieBooking
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=moviebooking;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=baibai123123
+spring.datasource.username=root
+spring.datasource.password=thanhtai???210701
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
